Add TornadoFlags.java for proper TornadoVM JBang configuration
- Create TornadoFlags.java with complete TornadoVM runtime setup
- Include GraalVM compiler dependency, module exports, and runtime config
- Reference TornadoFlags.java from LlamaTornadoCli.java using //SOURCES
- Remove duplicate configuration from main CLI file for cleaner structure
- Update README to document TornadoFlags.java and link to TornadoVM examples
- Follows the same pattern as TornadoVM JBang examples

This provides proper JVMCI compiler and TornadoVM runtime configuration
when running with JBang, enabling GPU acceleration support.